ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__BroadCaster_Service__c/CnP_PaaS__BroadCaster_Service__c.object-meta.xml
<CustomObject>
    <label>C&amp;P BroadCaster Service</label>
    <nameField>
        <label>BroadCaster Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P BroadCaster Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>