ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__BroadCaster_Service__c/fields/CnP_PaaS__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>