ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__BroadCaster_Service__c/fields/CnP_PaaS__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>