ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__BroadCaster_Service__c/fields/CnP_PaaS__IsAuthorized__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__IsAuthorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAuthorized</label>
    <type>Checkbox</type>
</CustomField>