ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__BroadCaster_Service__c/fields/CnP_PaaS__Token__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Token__c</fullName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>